# The-Booking-Calendar-web-application-

./: .cursorrules  CMakeLists.txt  README.md  booking.json  package-lock.json
.cursor/rules/: backend.mdc
scripts/: make.sh
src/: CMakeLists.txt  main.cpp
src/controllers/: booking_controller.hpp  client_controller.hpp  service_controller.hpp
src/db/: connection.hpp
src/models/: booking.cpp  booking.hpp  client.cpp  client.hpp  service.cpp  service.hpp
src/views/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/views/frontend/src/: App.tsx  index.tsx
src/views/frontend/src/components/: BookingForm.tsx  badge.tsx  scroll-area.tsx
src/views/frontend/src/interf/: CalendarView.tsx
src/views/frontend/src/screens/A/: A.tsx
